Avoid deprecated URL constructor